--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.5
+  shared_preferences: ^2.2.0
+  intl: ^0.18.1
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
