--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.2.0
   intl: ^0.18.1
   http: ^1.1.0
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
