--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.18.1
   http: ^1.1.0
   web_socket_channel: ^2.4.0
+  velocity_x: ^4.1.1
 
 dev_dependencies:
   flutter_test:
