--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.1.0
   web_socket_channel: ^2.4.0
   velocity_x: ^4.1.1
+  google_mobile_ads: ^3.0.0
 
 dev_dependencies:
   flutter_test:
