--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,9 @@ dependencies:
   http: ^1.1.0
   web_socket_channel: ^2.4.0
   velocity_x: ^4.1.1
+  audioplayers: ^5.1.0
   google_mobile_ads: ^3.0.0
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -66,9 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/sounds/01.wav
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
