--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   velocity_x: ^4.1.1
   audioplayers: ^5.1.0
   google_mobile_ads: ^3.0.0
+  sound_mode: ^2.0.2
+  vibration: ^1.8.1
   
 dev_dependencies:
   flutter_test:
@@ -68,7 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/sounds/01.wav
+    - assets/sounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
