feat: 앱 아이콘 및 이름 추가 & 백그라운드에서 포어그라운드 진입 시 웹소켓 생성

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         </intent>
     </queries>
     <application
-        android:label="mini_trade_flutter"
+        android:label="미니체결"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
