--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   vibration: ^1.8.1
   url_launcher: ^6.1.14
   flutter_native_splash: ^2.3.2
+  flutter_spinkit: ^5.2.0
   
 dev_dependencies:
   flutter_test:
