add: 버그 고치고 디자인 수정

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -240,6 +240,8 @@
 	<string>Main</string>
 	<key>UIStatusBarHidden</key>
 	<false/>
+	<key>UIStatusBarStyle</key>
+	<string></string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
