--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   sound_mode: ^2.0.2
   url_launcher: ^6.1.14
   flutter_native_splash: ^2.3.2
+  vibration: ^1.8.1
   
 dev_dependencies:
   flutter_test:
