--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-       package="minwoo.mini_trade_flutter">
+       package="minwoo.mini_trade">
     <queries>
         <intent>
             <action android:name="android.intent.action.VIEW" />
