--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,9 @@ dependencies:
   intl: ^0.18.1
   http: ^1.1.0
   web_socket_channel: ^2.4.0
-  velocity_x: ^4.1.1
+  velocity_x: ^4.1.2
   audioplayers: ^5.1.0
-  google_mobile_ads: ^3.0.0
+  google_mobile_ads: ^3.1.0
   sound_mode: ^2.0.2
   url_launcher: ^6.1.14
   flutter_native_splash: ^2.3.2
@@ -86,17 +86,20 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: sans
+      fonts:
+        - asset: assets/fonts/SpoqaHanSansNeo-Bold.otf
+          weight: 700
+        - asset: assets/fonts/SpoqaHanSansNeo-Medium.otf
+          weight: 500
+        - asset: assets/fonts/SpoqaHanSansNeo-Regular.otf
+          weight: 400
+        - asset: assets/fonts/SpoqaHanSansNeo-Light.otf
+          weight: 300
+        - asset: assets/fonts/SpoqaHanSansNeo-Thin.otf
+          weight: 100
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
